--- a/website/src/assets/components/_home.scss
+++ b/website/src/assets/components/_home.scss
@@ -24,7 +24,7 @@
   height: calc(100vh - 120px);
   padding-top: 60px;
   color: #FFF;
-  text-shadow: 0 1px 1px rgba(0,0,0,0.8);
+  text-shadow: 0 2px 2px rgba(0, 0, 0, 0.8);
   position: relative;
   z-index: 2;
   background-color: rgba(0,0,0,0.5);
@@ -41,7 +41,7 @@
     }
     h3{
       font-weight: 300;
-      opacity: .75;
+      opacity: .85;
     }
   }
 }
