--- a/website/src/assets/_variables.scss
+++ b/website/src/assets/_variables.scss
@@ -42,3 +42,9 @@ $font-family-base:            $font-family-sans-serif;
 $font-size-base:              1rem; // Assumes the browser default, typically `16px`
 $font-size-lg:                ($font-size-base * 1.25);
 $font-size-sm:                ($font-size-base * .875);
+
+$enable-caret: true;
+$enable-rounded: true;
+$border-radius: 0.15rem;
+$border-radius-lg: 0.15rem;
+$border-radius-sm: 0.15rem;
