--- a/website/src/assets/components/_room.scss
+++ b/website/src/assets/components/_room.scss
@@ -1,30 +1,12 @@
 .room{
   height: 100vh;
-  padding-top: 56px;
   position: relative;
-
-  .photograph{
-    height: 100%;
-    background-color: #000;
-    background-image: url(/beverage-breakfast-cafe-374147.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    box-shadow: 0px 80px 80px -80px rgba(0,0,0,0.25) inset, 0px -214px 214px -214px rgba(0,0,0,0.6) inset;
-    -webkit-font-smoothing: antialiased;
-    position: absolute;
-    &::before{
-      content: '';
-      display: block;
-      width: 100%;
-      height: 100%;
-      background-color: rgba($color: #000000, $alpha: 0.5);
-    }
-  }
+  background: #000;
 }
 
 .navbar-room{
   background-color: rgba($color: #000000, $alpha: 0.05);
+  border-bottom: 1px solid;
 
   .navbar-brand{
     font-weight: 600;
@@ -48,6 +30,18 @@
   }
 }
 
+
+.modal-room-settings{
+  .tabs{
+    min-height: 320px;
+
+    // fix width:0 bug
+    .el-tabs__active-bar{
+      width: calc(50% - 20px) !important;
+    }
+  }
+}
+
 .room .streams{
   padding: 10px;
   position: absolute;
@@ -57,29 +51,45 @@
   right: 0;
   text-shadow: 0 2px 2px rgba(0, 0, 0, 0.8);
 
-  ul{
-    margin-bottom: 0;
-  }
-
-  li{
+  .monitor{
     width: 176px;
     height: 99px;
     float: left;
     position: relative;
 
     &:not(:last-child) {
-      margin-right: 0.125rem;
+      margin-right: -3px;
     }
-  }
-}
 
-.modal-room-settings{
-  .tabs{
-    min-height: 320px;
+    &:hover{
+      border: 3px solid #FFF;
+    }
 
-    // fix width:0 bug
-    .el-tabs__active-bar{
-      width: calc(50% - 20px) !important;
+    &.active{
+      border: none;
+      width: 100%;
+      height: 100%;
+      position: fixed;
+      top: 57px;
+      bottom: 0;
+      left: 0;
+      right: 0;
+
+      .info{
+        padding: 2px 5px;
+        top: 0;
+        bottom: initial;
+        font-size: initial;
+        background: linear-gradient(rgba($color: #000000, $alpha: 0.35), transparent);
+        .audio-status{
+          top: 0px;
+          right: 5px;
+        }
+      }
+
+      .player video{
+        object-fit: contain !important;
+      }
     }
   }
 }
