Add room exited hint

--- a/website/src/assets/components/_room.scss
+++ b/website/src/assets/components/_room.scss
@@ -40,6 +40,17 @@
   }
 }
 
+.room .hint-exited{
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #FFF;
+}
+
 .room .streams{
   padding: 10px;
   position: absolute;
