--- a/website/src/assets/components/_room.scss
+++ b/website/src/assets/components/_room.scss
@@ -17,7 +17,7 @@
 }
 
 .navbar-room{
-  background-color: rgba($color: #000000, $alpha: 0.05);
+  background-color: #000;
   border-bottom: 1px solid;
 
   .navbar-brand{
