--- a/website/src/assets/components/_room.scss
+++ b/website/src/assets/components/_room.scss
@@ -37,6 +37,7 @@
       color: rgba($color: #FFF, $alpha: 0.95);
       &:hover{
         color: rgba($color: #FFF, $alpha: 1);
+        background: rgba($color: #FFF, $alpha: 0.15);
       }
     }
   }
