--- a/website/src/assets/element-ui.scss
+++ b/website/src/assets/element-ui.scss
@@ -2,12 +2,15 @@
 
 @import "../../node_modules/element-ui//packages/theme-chalk/src/base.scss";
 
+@import "../../node_modules/element-ui/packages/theme-chalk/src/button.scss";
 @import "../../node_modules/element-ui/packages/theme-chalk/src/input.scss";
 @import "../../node_modules/element-ui/packages/theme-chalk/src/select.scss";
 @import "../../node_modules/element-ui/packages/theme-chalk/src/option-group.scss";
 
 @import "../../node_modules/element-ui/packages/theme-chalk/src/tabs.scss";
 @import "../../node_modules/element-ui//packages/theme-chalk/src/tab-pane.scss";
+
+@import "../../node_modules/element-ui/packages/theme-chalk/src/color-picker.scss";
 
 .el-input__inner {
   height: 36px;
