--- a/website/src/assets/components/_whiteboard.scss
+++ b/website/src/assets/components/_whiteboard.scss
@@ -278,7 +278,7 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.26);
   }
 
-  .btn{
+  li > .btn{
     display: block;
     width: 40px;
     height: 40px;
@@ -293,31 +293,228 @@
       background-color: rgba($color: #000, $alpha: 0.05);
     }
   }
+}
 
-  .color-picker{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin: 3px 0;
-    padding: 5px 0;
+#whiteboard-stroke{
+  > span{
+    display: block;
+    width: 20px;
+    height: 20px;
+    border-radius: 2px;
+    border: 1px solid rgba($color: #000, $alpha: 0.15);
+    position: relative;
 
-    &:hover, &.active{
-      color: #000;
-      background-color: rgba($color: #000, $alpha: 0.05);
+    > span{
+      display: inline-block;
+      max-width: 100%;
+      max-height: 100%;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+}
+
+#whiteboard-stroke-settings {
+  .popover{
+    width: 195px;
+  }
+
+  .popover-body{
+    padding: 0.75rem 0.75rem;
+    h6{
+      font-size: 12px;
+      font-weight: 300;
     }
 
-    .el-color-picker__trigger{
-      width: 28px;
-      height: 28px;
+    .option-width{
+      position: relative;
+      height: 32px;
+      svg{
+        position: absolute;
+        z-index: 1;
+      }
 
-      padding: 3px;
-      .el-color-picker__color{
-        border: none;
+      .stroke-width-range{
+        position: absolute;
+        z-index: 2;
+        top: -3px;
+      }
+    }
+
+    .option-colors{
+      margin-bottom: 15px;
+
+      .btn{
+        width: 20px;
+        height: 20px;
+        margin: 4px;
+        border-radius: 50%;
+        cursor: pointer;
+        border: 1px solid rgba($color: #000, $alpha: 0.15);
+        &.active{
+          box-shadow: 0 0 3px 2px rgba($color: #409EFF, $alpha: 0.75);
+        }
       }
     }
   }
 }
 
-.whiteboard-color-picker-panel{
-  .el-color-dropdown__value{ display: none; }
+// stroke-width-range
+
+$stroke-range-track-width:          100% !default;
+$stroke-range-track-height:         .5rem !default;
+$stroke-range-track-cursor:         pointer !default;
+$stroke-range-track-bg:             transparent !default;
+$stroke-range-track-border-radius:  .5rem !default;
+$stroke-range-track-box-shadow:     inset 0 .25rem .25rem rgba($black, .1) !default;
+
+$stroke-range-thumb-width:                   .7rem !default;
+$stroke-range-thumb-height:                  2rem !default;
+$stroke-range-thumb-bg:                      #FFF !default;
+$stroke-range-thumb-border:                  1px solid #CCC !default;
+$stroke-range-thumb-border-radius:           3px !default;
+$stroke-range-thumb-box-shadow:              0 .1rem .25rem rgba($black, .5) !default;
+$stroke-range-thumb-focus-box-shadow:        0 .1rem .25rem rgba($black, .5) !default;
+$stroke-range-thumb-focus-box-shadow-width:  $input-focus-width !default; // For focus box shadow issue in IE/Edge
+$stroke-range-thumb-active-bg:               #FFF !default;
+$stroke-range-thumb-disabled-bg:             $gray-500 !default;
+
+.stroke-width-range {
+  width: 100%;
+  height: calc(#{$stroke-range-thumb-height} + #{$stroke-range-thumb-focus-box-shadow-width * 2});
+  padding: 0; // Need to reset padding
+  background-color: transparent;
+  appearance: none;
+
+  &:focus {
+    outline: none;
+
+    // Pseudo-elements must be split across multiple rulesets to have an effect.
+    // No box-shadow() mixin for focus accessibility.
+    &::-webkit-slider-thumb { box-shadow: $stroke-range-thumb-focus-box-shadow; }
+    &::-moz-range-thumb     { box-shadow: $stroke-range-thumb-focus-box-shadow; }
+    &::-ms-thumb            { box-shadow: $stroke-range-thumb-focus-box-shadow; }
+  }
+
+  &::-moz-focus-outer {
+    border: 0;
+  }
+
+  &::-webkit-slider-thumb {
+    width: $stroke-range-thumb-width;
+    height: $stroke-range-thumb-height;
+    margin-top: ($stroke-range-track-height - $stroke-range-thumb-height) / 2; // Webkit specific
+    @include gradient-bg($stroke-range-thumb-bg);
+    border: $stroke-range-thumb-border;
+    @include border-radius($stroke-range-thumb-border-radius);
+    @include box-shadow($stroke-range-thumb-box-shadow);
+    @include transition($custom-forms-transition);
+    appearance: none;
+
+    &:active {
+      @include gradient-bg($stroke-range-thumb-active-bg);
+    }
+  }
+
+  &::-webkit-slider-runnable-track {
+    width: $stroke-range-track-width;
+    height: $stroke-range-track-height;
+    color: transparent; // Why?
+    cursor: $stroke-range-track-cursor;
+    background-color: $stroke-range-track-bg;
+    border-color: transparent;
+    @include border-radius($stroke-range-track-border-radius);
+    @include box-shadow($stroke-range-track-box-shadow);
+  }
+
+  &::-moz-range-thumb {
+    width: $stroke-range-thumb-width;
+    height: $stroke-range-thumb-height;
+    @include gradient-bg($stroke-range-thumb-bg);
+    border: $stroke-range-thumb-border;
+    @include border-radius($stroke-range-thumb-border-radius);
+    @include box-shadow($stroke-range-thumb-box-shadow);
+    @include transition($custom-forms-transition);
+    appearance: none;
+
+    &:active {
+      @include gradient-bg($stroke-range-thumb-active-bg);
+    }
+  }
+
+  &::-moz-range-track {
+    width: $stroke-range-track-width;
+    height: $stroke-range-track-height;
+    color: transparent;
+    cursor: $stroke-range-track-cursor;
+    background-color: $stroke-range-track-bg;
+    border-color: transparent; // Firefox specific?
+    @include border-radius($stroke-range-track-border-radius);
+    @include box-shadow($stroke-range-track-box-shadow);
+  }
+
+  &::-ms-thumb {
+    width: $stroke-range-thumb-width;
+    height: $stroke-range-thumb-height;
+    margin-top: 0; // Edge specific
+    margin-right: $stroke-range-thumb-focus-box-shadow-width; // Workaround that overflowed box-shadow is hidden.
+    margin-left: $stroke-range-thumb-focus-box-shadow-width;  // Workaround that overflowed box-shadow is hidden.
+    @include gradient-bg($stroke-range-thumb-bg);
+    border: $stroke-range-thumb-border;
+    @include border-radius($stroke-range-thumb-border-radius);
+    @include box-shadow($stroke-range-thumb-box-shadow);
+    @include transition($custom-forms-transition);
+    appearance: none;
+
+    &:active {
+      @include gradient-bg($stroke-range-thumb-active-bg);
+    }
+  }
+
+  &::-ms-track {
+    width: $stroke-range-track-width;
+    height: $stroke-range-track-height;
+    color: transparent;
+    cursor: $stroke-range-track-cursor;
+    background-color: transparent;
+    border-color: transparent;
+    border-width: $stroke-range-thumb-height / 2;
+    @include box-shadow($stroke-range-track-box-shadow);
+  }
+
+  &::-ms-fill-lower {
+    background-color: $stroke-range-track-bg;
+    @include border-radius($stroke-range-track-border-radius);
+  }
+
+  &::-ms-fill-upper {
+    margin-right: 15px; // arbitrary?
+    background-color: $stroke-range-track-bg;
+    @include border-radius($stroke-range-track-border-radius);
+  }
+
+  &:disabled {
+    &::-webkit-slider-thumb {
+      background-color: $stroke-range-thumb-disabled-bg;
+    }
+
+    &::-webkit-slider-runnable-track {
+      cursor: default;
+    }
+
+    &::-moz-range-thumb {
+      background-color: $stroke-range-thumb-disabled-bg;
+    }
+
+    &::-moz-range-track {
+      cursor: default;
+    }
+
+    &::-ms-thumb {
+      background-color: $stroke-range-thumb-disabled-bg;
+    }
+  }
 }
