Update border-radius & modal header padding style

--- a/website/src/assets/_variables.scss
+++ b/website/src/assets/_variables.scss
@@ -45,6 +45,10 @@ $font-size-sm:                ($font-size-base * .875);
 
 $enable-caret: true;
 $enable-rounded: true;
-$border-radius: 0.15rem;
-$border-radius-lg: 0.15rem;
+$border-radius: 0.2rem;
+$border-radius-lg: 0.25rem;
 $border-radius-sm: 0.15rem;
+
+// Modals
+$modal-header-padding-y: 0.8rem !default;
+$modal-header-padding-x: 1rem !default;
