--- a/website/src/assets/element-ui.scss
+++ b/website/src/assets/element-ui.scss
@@ -10,6 +10,8 @@
 @import "../../node_modules/element-ui/packages/theme-chalk/src/tabs.scss";
 @import "../../node_modules/element-ui//packages/theme-chalk/src/tab-pane.scss";
 
+@import "../../node_modules/element-ui/packages/theme-chalk/src/message.scss";
+
 .el-input__inner {
   height: 36px;
   line-height: 36px;
