--- a/website/src/assets/components/_room.scss
+++ b/website/src/assets/components/_room.scss
@@ -66,6 +66,7 @@
   bottom: 0;
   right: 0;
   text-shadow: 0 2px 2px rgba(0, 0, 0, 0.8);
+  // transition: all 0.5s ease 0s;
 
   > .actions{
     transform: translateX(-50%);
