--- a/website/src/assets/components/_monitor.scss
+++ b/website/src/assets/components/_monitor.scss
@@ -19,6 +19,14 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+
+    img{
+      max-width: 100%;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 
   .player {
