--- a/website/src/assets/components/_quick_start.scss
+++ b/website/src/assets/components/_quick_start.scss
@@ -76,3 +76,10 @@ form.session{
     border: none;
   }
 }
+
+.profile-popover-card{
+  .avatar{
+    max-width: 64px;
+    max-height: 64px;
+  }
+}
