Import whiteboard css

--- a/website/src/assets/components/_whiteboard.scss
+++ b/website/src/assets/components/_whiteboard.scss
@@ -1,233 +1,4 @@
-.svg-whiteboard .textarea-layout {
-  z-index: 3;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  pointer-events: none;
-}
-.svg-whiteboard .textarea-layout > * {
-  position: absolute;
-  pointer-events: auto;
-}
-.svg-whiteboard .textarea-shadow {
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  overflow: hidden;
-  visibility: hidden;
-}
-.svg-whiteboard .textarea-shadow > * {
-  position: absolute;
-}
-.svg-whiteboard .textarea-shadow > span {
-  padding: 3px;
-  border: 1px dashed dodgerblue;
-}
-.svg-whiteboard .textarea-shadow > textarea,
-.svg-whiteboard .textarea-layout > div.textarea-wrapper > textarea {
-  -webkit-appearance: none;
-  padding: 0;
-  outline: none;
-  border: none;
-  resize: none;
-  overflow: hidden;
-  background: rgba(255, 255, 255, 0.7);
-}
-.svg-whiteboard .tag-boxes-fixed {
-  z-index: 2;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
-.svg-whiteboard .tag-boxes-fixed > * {
-  position: absolute;
-}
-.svg-whiteboard .tag-boxes-shadow {
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  overflow: hidden;
-  visibility: hidden;
-}
-.svg-whiteboard .tag-boxes-shadow > * {
-  position: absolute;
-}
-.svg-background {
-  width: 100%;
-  height: 100%;
-}
-.svg-whiteboard {
-  width: 100%;
-  height: 100%;
-  user-select: none;
-  overflow: hidden;
-}
-.svg-whiteboard .svg-background {
-  width: 100%;
-  height: 100%;
-}
-.svg-whiteboard .svg-background svg {
-  width: 100%;
-  height: 100%;
-}
-.whiteboard-hand {
-  cursor: url("https://sdk.herewhite.com/resource/mouse-cursor/hand-cursor.svg") 0 0, auto;
-  cursor: -webkit-image-set(url("https://sdk.herewhite.com/resource/mouse-cursor/hand-cursor.svg") 1x, url("https://sdk.herewhite.com/resource/mouse-cursor/hand-cursor%402x.png") 2x) 0 0, auto;
-}
-.whiteboard-hand {
-  cursor: url("https://sdk.herewhite.com/resource/mouse-cursor/hand-cursor.svg") 0 0, auto;
-  cursor: -webkit-image-set(url("https://sdk.herewhite.com/resource/mouse-cursor/hand-cursor.svg") 1x, url("https://sdk.herewhite.com/resource/mouse-cursor/hand-cursor%402x.png") 2x) 0 0, auto;
-}
-.whiteboard-selector {
-  cursor: url("https://sdk.herewhite.com/resource/mouse-cursor/selector-cursor.png") 5 4, auto;
-  cursor: -webkit-image-set(url("https://sdk.herewhite.com/resource/mouse-cursor/selector-cursor.png") 1x, url("https://sdk.herewhite.com/resource/mouse-cursor/selector-cursor%402x.png") 2x) 5 4, auto;
-}
-.whiteboard-pencil {
-  cursor: url("https://sdk.herewhite.com/resource/mouse-cursor/pencil-cursor.png") 2 22, auto;
-  cursor: -webkit-image-set(url("https://sdk.herewhite.com/resource/mouse-cursor/pencil-cursor.png") 1x, url("https://sdk.herewhite.com/resource/mouse-cursor/pencil-cursor%402x.png") 2x) 2 22, auto;
-}
-.whiteboard-eraser {
-  cursor: url("https://sdk.herewhite.com/resource/mouse-cursor/easer-cursor.png") 8 18, auto;
-  cursor: -webkit-image-set(url("https://sdk.herewhite.com/resource/mouse-cursor/easer-cursor.png") 1x, url("https://sdk.herewhite.com/resource/mouse-cursor/easer-cursor%402x.png") 2x) 8 18, auto;
-}
-.whiteboard-rectangle {
-  cursor: crosshair;
-}
-.whiteboard-ellipse {
-  cursor: crosshair;
-}
-.whiteboard-text {
-  cursor: text;
-}
-.svg-whiteboard .tag-boxes-fixed > div.highlight-box {
-  border: 1px solid;
-  box-shadow: 0 0 1px 0 #FFFFFF, inset 0 0 1px 0 #FFFFFF;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > *.cursor-nwse,
-.svg-whiteboard .tag-boxes-fixed > div.editor-box-mask.cursor-nwse {
-  cursor: nwse-resize;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > *.cursor-nesw,
-.svg-whiteboard .tag-boxes-fixed > div.editor-box-mask.cursor-nesw {
-  cursor: nesw-resize;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > *.cursor-ns,
-.svg-whiteboard .tag-boxes-fixed > div.editor-box-mask.cursor-ns {
-  cursor: ns-resize;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > *.cursor-ew,
-.svg-whiteboard .tag-boxes-fixed > div.editor-box-mask.cursor-ew {
-  cursor: ew-resize;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box {
-  pointer-events: none;
-  border: 1px solid;
-  box-shadow: 0 0 1px 0 #FFFFFF, inset 0 0 1px 0 #FFFFFF;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > div.operation-point-desktop {
-  width: 7px;
-  height: 7px;
-  position: absolute;
-  pointer-events: auto;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > div.operation-point-touch {
-  width: 33px;
-  height: 33px;
-  position: absolute;
-  pointer-events: auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > div.operation-point-touch > * {
-  pointer-events: none;
-  width: 7px;
-  height: 7px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-desktop.left-top {
-  left: -4px;
-  top: -4px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-desktop.right-top {
-  right: -4px;
-  top: -4px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-desktop.left-bottom {
-  left: -4px;
-  bottom: -4px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-desktop.right-bottom {
-  right: -4px;
-  bottom: -4px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-desktop.top {
-  top: -4px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-desktop.right {
-  right: -4px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-desktop.bottom {
-  bottom: -4px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-desktop.left {
-  left: -4px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-touch.left-top {
-  left: -17px;
-  top: -17px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-touch.right-top {
-  right: -17px;
-  top: -17px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-touch.left-bottom {
-  left: -17px;
-  bottom: -17px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-touch.right-bottom {
-  right: -17px;
-  bottom: -17px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-touch.top {
-  top: -17px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-touch.right {
-  right: -17px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-touch.bottom {
-  bottom: -17px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box > .operation-point-touch.left {
-  left: -17px;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box-mask {
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-}
-.svg-whiteboard .tag-boxes-fixed > div.editor-box-others {
-  border: 1px solid;
-}
-.svg-whiteboard .tag-boxes-fixed > div.selected-group {
-  border: 1px solid;
-  box-shadow: 0 0 1px 0 #FFFFFF, inset 0 0 1px 0 #FFFFFF;
-}
-.svg-whiteboard .tag-boxes-fixed > div.textarea-box {
-  border: 1px dashed;
-}
-
-// --------------------------------------------------------------------
+@import "../../node_modules/white-web-sdk/style/index.css";
 
 // fixed
 .svg-whiteboard.crosshair {
