Update insert image func

--- a/website/src/assets/element-ui.scss
+++ b/website/src/assets/element-ui.scss
@@ -12,6 +12,8 @@
 
 @import "../../node_modules/element-ui/packages/theme-chalk/src/message.scss";
 
+@import "../../node_modules/element-ui/packages/theme-chalk/src/upload.scss";
+
 .el-input__inner {
   height: 36px;
   line-height: 36px;
