--- a/website/src/assets/components/_whiteboard.scss
+++ b/website/src/assets/components/_whiteboard.scss
@@ -49,7 +49,8 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.26);
   }
 
-  li > .btn{
+  li > .btn,
+  .image-uploader .el-upload .btn{
     display: block;
     width: 40px;
     height: 40px;
