--- a/website/src/assets/components/_home.scss
+++ b/website/src/assets/components/_home.scss
@@ -85,7 +85,10 @@
 }
 
 .features{
-  background: #FFF;
+  background-size: 100% 15px;
+  background-repeat: repeat-x;
+  background-color: #FFF;
+  background-image: linear-gradient(rgba(0,0,0,0.25) 0%,rgba(0,0,0,0) 100%);
   position: relative;
   z-index: 2;
   font-size: 1.5rem;
