--- a/website/src/assets/components/_navbar.scss
+++ b/website/src/assets/components/_navbar.scss
@@ -1,5 +1,9 @@
 #navbar{
-  background-color: rgba($color: #000000, $alpha: 0.05);
+  background-color: rgba($color: #000000, $alpha: 0.75);
+
+  .navbar-nav .nav-link {
+    color: rgba(255, 255, 255, 0.85);
+  }
 
   .navbar-brand{
     font-weight: 600;
