Update landing page

--- a/website-v2/src/assets/components/_layout.scss
+++ b/website-v2/src/assets/components/_layout.scss
@@ -1,16 +1,39 @@
 .app-layout-header {
-  .logo {
+  width: 100%;
+  height: 58px;
+  line-height: 58px;
+  padding: 0 1rem;
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+  background-color: rgba(0,0,0,.75);
+
+  .brand {
     display: inline-block;
-    width: 32px;
-    height: 32px;
-    margin-right: 16px;
-    vertical-align: middle;
-    background-color: #FFF;
-    background-image: url(../images/logo.svg);
-    background-repeat: no-repeat;
-    background-position: top,0 0;
-    background-size: 32px 32px,cover;
-    border-radius: 3px;
+    line-height: 40px;
+    padding-top: .3125rem;
+    padding-bottom: .3125rem;
+    margin-right: 1rem;
+    white-space: nowrap;
+    color: #FFF;
+    font-size: 1.25rem;
+    font-weight: 600;
+    position: relative;
+
+    span {
+      margin-right: 5px;
+    }
+
+    sup {
+      font-weight: 300;
+      font-size: 12px;
+      position: absolute;
+      right: 0;
+      top: 8px;
+      -webkit-transform: translate(100%,100%);
+      transform: translate(100%,100%);
+    }
   }
 
   .app-menu {
