--- a/website-v2/src/landing/landing.scss
+++ b/website-v2/src/landing/landing.scss
@@ -3,7 +3,7 @@
 }
 
 .photograph{
-  height: calc(100vh - 120px);
+  height: calc(100vh - 150px);
   background-color: #000;
   background-image: url(/beverage-breakfast-cafe-374147.jpg);
   background-repeat: no-repeat;
@@ -21,7 +21,7 @@
 .hero{
   display: table;
   width: 100%;
-  height: calc(100vh - 120px);
+  height: calc(100vh - 150px);
   padding-top: 60px;
   color: #FFF;
   text-shadow: 0 2px 2px rgba(0, 0, 0, 0.8);
@@ -36,11 +36,13 @@
     text-align: center;
 
     h1{
+      color: #FFF;
       line-height: 1.4;
       font-size: 3.2rem;
       font-weight: 300;
     }
     h3{
+      color: #FFF;
       line-height: 1.4;
       font-weight: 300;
       opacity: .85;
@@ -51,8 +53,14 @@
 .feature-actions{
   margin: 60px 0;
 
+  .list-inline, .list-unstyled {
+    padding-left: 0;
+    list-style: none;
+  }
+
   li.list-inline-item{
     margin: 0 24px;
+    display: inline-block;
 
     span{
       display: block;
@@ -61,16 +69,23 @@
     }
   }
 
-  .btn{
+  .app-btn{
     width: 80px;
     height: 80px;
+    line-height: 1;
     margin-bottom: 24px;
     border: 2px solid #FFF;
     box-shadow: 0 0 4px rgba(0,0,0,0.5);
     color: #FFF;
+    background: transparent;
 
     &, svg{
       transition: all .27s ease-in-out;
+    }
+
+    svg {
+      width: 24px;
+      height: 24px;
     }
 
     &:hover{
@@ -94,10 +109,23 @@
   font-size: 1.5rem;
 
   .media{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
     padding: 5rem;
 
     &:nth-of-type(even) {
       background-color: rgba(0,0,0,.035);
+    }
+
+    svg {
+      width: 80px;
+      height: 80px;
+      margin-top: .5rem!important;
+      margin-right: 3rem!important;
     }
 
     h2 {
