--- a/website-v2/src/assets/main.scss
+++ b/website-v2/src/assets/main.scss
@@ -1,8 +1,5 @@
 @import 'variables';
 
-@import "components/common";
-@import "components/layout";
-
 @import "components/quick_start";
 @import "components/room";
 @import "components/monitor";
@@ -10,10 +7,38 @@
 @import "components/chat";
 @import "components/contact";
 
-body{
+html:lang(zh_CN) body {
+  font-family: "Lato","Microsoft Yahei","微软雅黑","STXihei","Meiryo UI","Meiryo","メイリオ","ＭＳ Ｐゴシック","MS PGothic","Hiragino Kaku Gothic Pro","Arial Unicode MS","Helvetica Neue","Helvetica","Arial",sans-serif;
+}
+
+body, html {
+  margin: 0;
+  color: #333;
   -webkit-font-smoothing: antialiased;
-  font-family: Roboto, Arial, "Noto Sans", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: Roboto, Arial, "Noto Sans", sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
+}
+
+img {
+  max-width: 100%;
+}
+
+.browsehappy {
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
+}
+
+a, .btn{
+  cursor: pointer;
+}
+
+a:not([href]):not([tabindex]) {
+  color: #007bff;
+  &:hover{
+    color: #0056b3;
+  }
 }
 
 .h1, h1 {
@@ -62,5 +87,25 @@ body{
 }
 
 .app-layout-footer{
+  margin-top: 25px;
   background: transparent;
+}
+
+.text-muted {
+  color: #999;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.btn-success {
+  color: #fff;
+  background-color: #28a745;
+  border-color: #28a745;
+  &:hover {
+    color: #fff;
+    background-color: #218838;
+    border-color: #1e7e34;
+  }
 }
