--- a/website-v2/src/assets/main.scss
+++ b/website-v2/src/assets/main.scss
@@ -109,3 +109,19 @@ a:not([href]):not([tabindex]) {
     border-color: #1e7e34;
   }
 }
+
+@keyframes spinner-border {
+  to { transform: rotate(360deg); }
+}
+
+.spinner-border {
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  vertical-align: text-bottom;
+  border: .25em solid currentColor;
+  border-right-color: transparent;
+  border-radius: 50%;
+  -webkit-animation: spinner-border .75s linear infinite;
+  animation: spinner-border .75s linear infinite;
+}
