--- a/website-v2/src/whiteboard/whiteboard.scss
+++ b/website-v2/src/whiteboard/whiteboard.scss
@@ -88,6 +88,16 @@
     height: 20px;
     vertical-align: middle;
   }
+
+  .app-upload .icon-uploading{
+    margin-right: 0;
+    width: 20px;
+    height: 20px;
+    > svg {
+      width: 20px;
+      height: 20px;
+    }
+  }
 }
 
 #whiteboard-stroke{
