Add whiteboard loading

--- a/website-v2/src/whiteboard/whiteboard.scss
+++ b/website-v2/src/whiteboard/whiteboard.scss
@@ -20,6 +20,13 @@
   background: #FFF;
 
   &.active{ z-index: 999; }
+
+  .whiteboard-loading{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -30px;
+  }
 }
 
 .whiteboard-main{
