Add rtc component

--- a/website-v2/src/room/room.scss
+++ b/website-v2/src/room/room.scss
@@ -3,7 +3,7 @@
   min-width: 960px;
   min-height: 540px;
   position: relative;
-  background: #000;
+  // background: #000;
 }
 
 .room .placeholder{
